--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <head>
 <meta charset="utf-8"/>
 <meta content="width=device-width, initial-scale=1" name="viewport"/>
-<title>清洗訂單排程系統</title>
+<title>自然大叔 ∣ 訂單排程系統</title>
 <link href="https://res.cloudinary.com/dijzndzw2/image/upload/v1757176751/logo-3_hddq08.png" rel="icon" type="image/png"/>
 <style>
     :root{
@@ -138,7 +138,7 @@
 <strong>搜尋</strong>
 <input id="searchInput" placeholder="姓名 / 電話 / 地址" style="width:220px" type="text"/>
 </div>
-<div class="right"><button class="accent" id="gdriveBackupBtn">☁️Google</button>
+<div class="right"><button class="accent" id="#btn-gdrive-backup">☁️Google</button>
 <button class="accent" id="newBtn">新增訂單</button>
 <button id="newExpenseBtn">新增花費</button>
 <button id="exportJson">匯出JSON</button>
@@ -1444,17 +1444,16 @@ window.addEventListener('DOMContentLoaded', () => {
 });
 </script>
 <script src="https://apis.google.com/js/api.js"></script>
+
 <script>
 const CLIENT_ID = '894514639805-g3073pmjvadbasfp1g25r24rjhl9iacb.apps.googleusercontent.com';
 const SCOPES = 'https://www.googleapis.com/auth/drive.file';
 let tokenClient, gapiInited = false, gisInited = false;
 
-// 初始化 GAPI client
 function gdriveInit() {
   gapi.load('client', async () => {
     await gapi.client.init({ apiKey: '', discoveryDocs: ["https://www.googleapis.com/discovery/v1/apis/drive/v3/rest"] });
     gapiInited = true;
-    document.getElementById('gdriveBackupBtn').disabled = false;
   });
 
   tokenClient = google.accounts.oauth2.initTokenClient({
@@ -1470,7 +1469,6 @@ function gdriveInit() {
   });
 }
 
-// 上傳備份到 Google Drive
 function uploadBackupToDrive() {
   const data = {
     orders: JSON.parse(localStorage.getItem('yl_clean_orders_v1') || '[]'),
@@ -1480,14 +1478,7 @@ function uploadBackupToDrive() {
   };
   const blob = new Blob([JSON.stringify(data, null, 2)], { type: 'application/json' });
   const metadata = {
-    const now = new Date();
-const dateStr = now.getFullYear() + '-' +
-                String(now.getMonth() + 1).padStart(2, '0') + '-' +
-                String(now.getDate()).padStart(2, '0') + '_' +
-                String(now.getHours()).padStart(2, '0') + '-' +
-                String(now.getMinutes()).padStart(2, '0') + '-' +
-                String(now.getSeconds()).padStart(2, '0');
-name: `清洗訂單_${dateStr}.json`,
+    name: `清洗訂單_${new Date().toISOString().split('T')[0]}.json`,
     mimeType: 'application/json'
   };
 
@@ -1511,34 +1502,184 @@ name: `清洗訂單_${dateStr}.json`,
   });
 }
 
-// 綁定按鈕事件，按下才觸發授權流程
-window.onload = () => {
-  const btn = document.getElementById('gdriveBackupBtn');
-  if (btn) btn.disabled = true;
+document.getElementById('gdriveBackupBtn')?.addEventListener('click', () => {
+  if (!gapiInited) return alert('Google API 尚未初始化，請稍後再試');
+  tokenClient.requestAccessToken();
+});
 
-  const gsiScript = document.createElement('script');
-  gsiScript.src = "https://accounts.google.com/gsi/client";
-  gsiScript.onload = () => {
+// 初始化
+window.onload = () => {
+  const script = document.createElement('script');
+  script.src = "https://accounts.google.com/gsi/client";
+  script.onload = () => {
     gisInited = true;
     gdriveInit();
   };
-  document.body.appendChild(gsiScript);
+  document.body.appendChild(script);
+};
+</script>
+<!-- === Auto-backup to 「訂單排成備份」資料夾：附加覆蓋版 === -->
+<script>
+// 若你的頁面已載入 GSI 與建立 tokenClient（沿用現有變數 tokenClient 與初始化流程）
+// 這段腳本會覆蓋舊的雲端備份按鈕行為，將檔案自動備份到固定資料夾「訂單排成備份」，同日重按會覆寫同名檔。
 
-  const gapiScript = document.createElement('script');
-  gapiScript.src = "https://apis.google.com/js/api.js";
-  document.body.appendChild(gapiScript);
+(function(){
+  const BACKUP_FOLDER_NAME = '訂單排成備份';
 
-  if (btn) {
-    btn.addEventListener('click', () => {
-      if (!gapiInited || !tokenClient) {
-        alert("Google API 尚未初始化完成，請稍後再試。");
-        return;
-      }
-      tokenClient.requestAccessToken();
+  async function withAccessToken(run) {
+    return new Promise((resolve, reject) => {
+      try {
+        if (!window.tokenClient) throw new Error('tokenClient 尚未初始化');
+        tokenClient.callback = async (resp) => {
+          try {
+            if (resp.error) throw resp;
+            const result = await run(resp.access_token);
+            resolve(result);
+          } catch (e) { reject(e); }
+        };
+        try {
+          tokenClient.requestAccessToken({ prompt: '' });
+        } catch (_) {
+          tokenClient.requestAccessToken();
+        }
+      } catch (e) { reject(e); }
     });
   }
-};
-</script></body>
+
+  async function ensureBackupFolder(accessToken) {
+    const searchParams = new URLSearchParams({
+      q: `mimeType='application/vnd.google-apps.folder' and name='${BACKUP_FOLDER_NAME}' and trashed=false`,
+      fields: 'files(id,name)'
+    });
+    const listRes = await fetch(`https://www.googleapis.com/drive/v3/files?${searchParams}`, {
+      headers: { Authorization: `Bearer ${accessToken}` }
+    });
+    if (!listRes.ok) throw new Error('查詢資料夾失敗');
+    const listJson = await listRes.json();
+    if (listJson.files && listJson.files.length > 0) return listJson.files[0].id;
+
+    const createRes = await fetch('https://www.googleapis.com/drive/v3/files?fields=id', {
+      method: 'POST',
+      headers: {
+        Authorization: `Bearer ${accessToken}`,
+        'Content-Type': 'application/json; charset=UTF-8'
+      },
+      body: JSON.stringify({
+        name: BACKUP_FOLDER_NAME,
+        mimeType: 'application/vnd.google-apps.folder'
+      })
+    });
+    if (!createRes.ok) throw new Error('建立資料夾失敗');
+    const createJson = await createRes.json();
+    return createJson.id;
+  }
+
+  function buildBackupJson() {
+    // 盡量沿用既有的資料讀取函式名稱，若不存在則以空陣列代替，避免報錯
+    const payload = {
+      exportedAt: new Date().toISOString(),
+      orders: (window.loadOrders ? loadOrders() : []),
+      staffList: (window.loadStaffList ? loadStaffList() : []),
+      contactList: (window.loadContactList ? loadContactList() : []),
+      expenses: (window.loadExpenses ? loadExpenses() : []),
+      expenseCategories: (window.loadExpenseCategories ? loadExpenseCategories() : [])
+    };
+    return JSON.stringify(payload, null, 2);
+  }
+
+  async function uploadJsonToFolder(accessToken, folderId, fileName, jsonString) {
+    const q = `'${folderId}' in parents and name='${fileName}' and trashed=false`;
+    const search = new URLSearchParams({ q, fields: 'files(id,name)' });
+    const existRes = await fetch(`https://www.googleapis.com/drive/v3/files?${search}`, {
+      headers: { Authorization: `Bearer ${accessToken}` }
+    });
+    if (!existRes.ok) throw new Error('查詢既有備份失敗');
+    const existJson = await existRes.json();
+    const existing = (existJson.files && existJson.files[0]) || null;
+
+    const metadata = {
+      name: fileName,
+      mimeType: 'application/json',
+      parents: [folderId]
+    };
+    const boundary = '-------yl_backup_' + Math.random().toString(16).slice(2);
+    const body = [
+      `--${boundary}`,
+      'Content-Type: application/json; charset=UTF-8',
+      '',
+      JSON.stringify(metadata),
+      `--${boundary}`,
+      'Content-Type: application/json; charset=UTF-8',
+      '',
+      jsonString,
+      `--${boundary}--`,
+      ''
+    ].join('\r\n');
+
+    const method = existing ? 'PATCH' : 'POST';
+    const url = existing
+      ? `https://www.googleapis.com/upload/drive/v3/files/${existing.id}?uploadType=multipart&fields=id`
+      : `https://www.googleapis.com/upload/drive/v3/files?uploadType=multipart&fields=id`;
+
+    const res = await fetch(url, {
+      method,
+      headers: {
+        Authorization: `Bearer ${accessToken}`,
+        'Content-Type': `multipart/related; boundary=${boundary}`
+      },
+      body
+    });
+    if (!res.ok) throw new Error('上傳備份失敗');
+  }
+
+  async function gdriveAutoBackupToFixedFolder() {
+    const fileName = `清洗訂單_${new Date().toISOString().slice(0,10)}.json`;
+    const json = buildBackupJson();
+    await withAccessToken(async (accessToken) => {
+      const folderId = await ensureBackupFolder(accessToken);
+      await uploadJsonToFolder(accessToken, folderId, fileName, json);
+    });
+    alert(`已備份到「${BACKUP_FOLDER_NAME}」資料夾（檔名：${fileName}）`);
+  }
+
+  function tryBindButtons() {
+    const candidates = [
+      '#btn-gdrive-backup','#btn-gdrive','#btn-google','#btnBackupGoogle',
+      '#btn-cloud','#btnDrive','#btnBackup','#gdrive-backup'
+    ];
+    let btn = null;
+    for (const sel of candidates) {
+      const el = document.querySelector(sel);
+      if (el) { btn = el; break; }
+    }
+    // 退而求其次：找包含 Google/雲端/☁️ 字樣的按鈕
+    if (!btn) {
+      const allBtns = Array.from(document.querySelectorAll('button, a, [role=\"button\"]'));
+      btn = allBtns.find(el => /google|雲端|備份|☁️/i.test(el.textContent || ''));
+    }
+    if (btn) {
+      btn.addEventListener('click', function(ev){
+        ev.preventDefault();
+        gdriveAutoBackupToFixedFolder().catch(err => {
+          console.error(err);
+          alert('Google Drive 備份發生問題：' + (err && err.message ? err.message : err));
+        });
+      }, true);
+    } else {
+      console.warn('找不到 Google 備份按鈕，請確認按鈕的 selector 並綁定至 gdriveAutoBackupToFixedFolder');
+    }
+  }
+
+  // 避免和現有初始化時序衝突，DOM 互動延後到 load 後
+  if (document.readyState === 'complete') {
+    setTimeout(tryBindButtons, 0);
+  } else {
+    window.addEventListener('load', () => setTimeout(tryBindButtons, 0));
+  }
+})();
+</script>
+
+</body>
 </html>
 <script>
 // 強制手風琴預設收合（解決部分瀏覽器 <details> 預設展開問題）
