--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
 <strong>搜尋</strong>
 <input id="searchInput" placeholder="姓名 / 電話 / 地址" style="width:220px" type="text"/>
 </div>
-<div class="right"><button class="accent" id="#btn-gdrive-backup">☁️Google</button>
+<div class="right"><button class="accent" id="gdriveBackupBtn">☁️Google</button>
 <button class="accent" id="newBtn">新增訂單</button>
 <button id="newExpenseBtn">新增花費</button>
 <button id="exportJson">匯出JSON</button>
@@ -1450,159 +1450,57 @@ const CLIENT_ID = '894514639805-g3073pmjvadbasfp1g25r24rjhl9iacb.apps.googleuser
 const SCOPES = 'https://www.googleapis.com/auth/drive.file';
 let tokenClient, gapiInited = false, gisInited = false;
 
-// === 將「☁️ Google」按鈕改成：自動備份到固定資料夾「訂單排成備份」===
-// 使用前提：仍沿用既有 GIS Token Client + scope 'https://www.googleapis.com/auth/drive.file'
-// 這段可直接貼到原本 gdrive 相關區塊（覆蓋舊的備份函式與按鈕綁定）。
+function gdriveInit() {
+  gapi.load('client', async () => {
+    await gapi.client.init({ apiKey: '', discoveryDocs: ["https://www.googleapis.com/discovery/v1/apis/drive/v3/rest"] });
+    gapiInited = true;
+  });
 
-// 1) 常數設定
-const BACKUP_FOLDER_NAME = '訂單排成備份';
-
-// 2) 取得 Access Token 的通用方法（沿用你現有的 tokenClient 實例）
-// 說明：你原本已有 tokenClient，這裡提供一個包裝，讓後續呼叫更乾淨。
-async function withAccessToken(run) {
-  return new Promise((resolve, reject) => {
-    try {
-      tokenClient.callback = async (resp) => {
-        try {
-          if (resp.error) throw resp;
-          const result = await run(resp.access_token);
-          resolve(result);
-        } catch (e) {
-          reject(e);
-        }
-      };
-      // 已授權：避免彈窗
-      try {
-        tokenClient.requestAccessToken({ prompt: '' });
-      } catch (_) {
-        // 首次授權：會出現彈窗
-        tokenClient.requestAccessToken();
+  tokenClient = google.accounts.oauth2.initTokenClient({
+    client_id: CLIENT_ID,
+    scope: SCOPES,
+    callback: async (tokenResponse) => {
+      if (tokenResponse.error) {
+        alert('授權失敗');
+        return;
       }
-    } catch (e) {
-      reject(e);
+      uploadBackupToDrive();
     }
   });
 }
 
-// 3) 確認或建立備份資料夾
-async function ensureBackupFolder(accessToken) {
-  // 搜尋同名資料夾（注意：drive.file scope 只能看見由本應用建立/存取過的檔案）
-  const searchParams = new URLSearchParams({
-    q: `mimeType='application/vnd.google-apps.folder' and name='${BACKUP_FOLDER_NAME}' and trashed=false`,
-    fields: 'files(id,name)'
-  });
-  const listRes = await fetch(`https://www.googleapis.com/drive/v3/files?${searchParams}`, {
-    headers: { Authorization: `Bearer ${accessToken}` }
-  });
-  if (!listRes.ok) throw new Error('查詢資料夾失敗');
-  const listJson = await listRes.json();
-  if (listJson.files && listJson.files.length > 0) {
-    return listJson.files[0].id;
-  }
-  // 建立新資料夾
-  const createRes = await fetch('https://www.googleapis.com/drive/v3/files?fields=id', {
-    method: 'POST',
-    headers: {
-      Authorization: `Bearer ${accessToken}`,
-      'Content-Type': 'application/json; charset=UTF-8'
-    },
-    body: JSON.stringify({
-      name: BACKUP_FOLDER_NAME,
-      mimeType: 'application/vnd.google-apps.folder'
-    })
-  });
-  if (!createRes.ok) throw new Error('建立資料夾失敗');
-  const createJson = await createRes.json();
-  return createJson.id;
-}
-
-// 4) 將（orders、staffList、contactList…）打包為 JSON 字串（沿用你原本的資料取得方法）
-function buildBackupJson() {
-  const payload = {
-    exportedAt: new Date().toISOString(),
-    orders: loadOrders(),            // ← 你原本的存取函式
-    staffList: loadStaffList(),      // ← 你原本的存取函式
-    contactList: loadContactList(),  // ← 你原本的存取函式
-    expenses: loadExpenses?.() || [],
-    expenseCategories: loadExpenseCategories?.() || []
+function uploadBackupToDrive() {
+  const data = {
+    orders: JSON.parse(localStorage.getItem('yl_clean_orders_v1') || '[]'),
+    staffList: JSON.parse(localStorage.getItem('yl_clean_staff_v1') || '[]'),
+    contactList: JSON.parse(localStorage.getItem('yl_clean_contact_v1') || '[]'),
+    exportedAt: new Date().toISOString()
   };
-  return JSON.stringify(payload, null, 2);
-}
-
-// 5) 在指定資料夾內上傳（同日覆寫）
-async function uploadJsonToFolder(accessToken, folderId, fileName, jsonString) {
-  // 檢查同名檔案（在該資料夾）
-  const q = `'${folderId}' in parents and name='${fileName}' and trashed=false`;
-  const search = new URLSearchParams({ q, fields: 'files(id,name)' });
-  const existRes = await fetch(`https://www.googleapis.com/drive/v3/files?${search}`, {
-    headers: { Authorization: `Bearer ${accessToken}` }
-  });
-  if (!existRes.ok) throw new Error('查詢既有備份失敗');
-  const existJson = await existRes.json();
-  const existing = (existJson.files && existJson.files[0]) || null;
-
+  const blob = new Blob([JSON.stringify(data, null, 2)], { type: 'application/json' });
   const metadata = {
-    name: fileName,
-    mimeType: 'application/json',
-    parents: [folderId]
+    name: `清洗訂單_${new Date().toISOString().split('T')[0]}.json`,
+    mimeType: 'application/json'
   };
-  const boundary = '-------yl_backup_' + Math.random().toString(16).slice(2);
-  const body = [
-    `--${boundary}`,
-    'Content-Type: application/json; charset=UTF-8',
-    '',
-    JSON.stringify(metadata),
-    `--${boundary}`,
-    'Content-Type: application/json; charset=UTF-8',
-    '',
-    jsonString,
-    `--${boundary}--`,
-    ''
-  ].join('\r\n');
 
-  const method = existing ? 'PATCH' : 'POST';
-  const url = existing
-    ? `https://www.googleapis.com/upload/drive/v3/files/${existing.id}?uploadType=multipart&fields=id`
-    : `https://www.googleapis.com/upload/drive/v3/files?uploadType=multipart&fields=id`;
+  const form = new FormData();
+  form.append('metadata', new Blob([JSON.stringify(metadata)], { type: 'application/json' }));
+  form.append('file', blob);
 
-  const res = await fetch(url, {
-    method,
-    headers: {
-      Authorization: `Bearer ${accessToken}`,
-      'Content-Type': `multipart/related; boundary=${boundary}`
-    },
-    body
+  fetch('https://www.googleapis.com/upload/drive/v3/files?uploadType=multipart', {
+    method: 'POST',
+    headers: new Headers({ 'Authorization': 'Bearer ' + gapi.auth.getToken().access_token }),
+    body: form
+  })
+  .then(res => res.json())
+  .then(res => {
+    if (res.id) alert('✅ 備份成功，上傳至你的 Google Drive！');
+    else alert('❌ 備份失敗：' + JSON.stringify(res));
+  })
+  .catch(err => {
+    console.error(err);
+    alert('❌ 備份發生錯誤');
   });
-  if (!res.ok) throw new Error('上傳備份失敗');
 }
-
-// 6) 主要入口：一鍵自動備份到固定資料夾
-async function gdriveAutoBackupToFixedFolder() {
-  const fileName = `清洗訂單_${new Date().toISOString().slice(0,10)}.json`;
-  const json = buildBackupJson();
-  await withAccessToken(async (accessToken) => {
-    const folderId = await ensureBackupFolder(accessToken);
-    await uploadJsonToFolder(accessToken, folderId, fileName, json);
-  });
-  alert(`已備份到「${BACKUP_FOLDER_NAME}」資料夾（檔名：${fileName}）`);
-}
-
-// 7) 事件綁定：將右上角「☁️Google」按鈕改綁到新函式
-(function bindGoogleBackupButton() {
-  const btn = document.querySelector('#btn-gdrive-backup'); // ← 你的按鈕 id（若不同請調整）
-  if (!btn) return;
-  btn.onclick = () => {
-    gdriveAutoBackupToFixedFolder().catch(err => {
-      console.error(err);
-      alert('Google Drive 備份發生問題：' + (err && err.message ? err.message : err));
-    });
-  };
-})();
-
-// 備註：
-// 1) 這版使用 drive.file scope。若想「使用既有（非本程式建立）的同名資料夾」，需擴權至 drive.metadata.readonly 或 drive（較寬），
-//    或在首次使用時呼叫 Drive Picker 讓使用者選擇一次資料夾以授權可見。此處遵循最小權限，會自建並沿用自己的資料夾。
-// 2) 檔名採日期，同日再次備份會覆寫同名檔，避免累積太多分身。
 
 document.getElementById('gdriveBackupBtn')?.addEventListener('click', () => {
   if (!gapiInited) return alert('Google API 尚未初始化，請稍後再試');
