--- a/index.html
+++ b/index.html
@@ -139,6 +139,7 @@
 <input id="searchInput" placeholder="姓名 / 電話 / 地址" style="width:220px" type="text"/>
 </div>
 <div class="right"><button class="accent" id="gdriveBackupBtn">☁️Google</button>
+<button id="btnDriveRestore" class="btn-secondary" title="從 Google Drive 還原備份">↓Google</button>
 <button class="accent" id="newBtn">新增訂單</button>
 <button id="newExpenseBtn">新增花費</button>
 <button id="exportJson">匯出JSON</button>
@@ -1450,6 +1451,52 @@ const CLIENT_ID = '894514639805-g3073pmjvadbasfp1g25r24rjhl9iacb.apps.googleuser
 const SCOPES = 'https://www.googleapis.com/auth/drive.file';
 let tokenClient, gapiInited = false, gisInited = false;
 
+
+
+// === Google Drive Auth Helper (for both ☁️Google / ↓Google) ===
+async function ensureDriveAuth({ prompt = '' } = {}) {
+  // Try to reuse existing access token from gapi.auth (if any)
+  try {
+    const t = (window.gapi && gapi.auth && typeof gapi.auth.getToken === 'function') ? gapi.auth.getToken() : null;
+    if (t && t.access_token) return t.access_token;
+  } catch (e) { /* ignore */ }
+
+  // Initialize token client if needed
+  try {
+    if (!window.tokenClient) {
+      if (typeof gdriveInit === 'function') {
+        try { gdriveInit(); } catch (e) {}
+      }
+    }
+  } catch (e) { /* ignore */ }
+
+  // Request a new token via GIS
+  return await new Promise((resolve, reject) => {
+    if (!window.google || !google.accounts || !google.accounts.oauth2 || !window.tokenClient) {
+      reject(new Error('Google 身分服務尚未就緒，請稍後再試。'));
+      return;
+    }
+    try {
+      window.tokenClient.callback = (resp) => {
+        if (resp && resp.access_token) {
+          // Bridge into gapi.auth for code using gapi.auth.getToken()
+          try {
+            if (window.gapi && gapi.auth && typeof gapi.auth.setToken === 'function') {
+              gapi.auth.setToken({ access_token: resp.access_token });
+            }
+          } catch (e) { /* no-op */ }
+          resolve(resp.access_token);
+        } else {
+          reject(resp);
+        }
+      };
+      window.tokenClient.requestAccessToken({ prompt });
+    } catch (e) {
+      reject(e);
+    }
+  });
+}
+
 function gdriveInit() {
   gapi.load('client', async () => {
     await gapi.client.init({ apiKey: '', discoveryDocs: ["https://www.googleapis.com/discovery/v1/apis/drive/v3/rest"] });
@@ -1469,7 +1516,9 @@ function gdriveInit() {
   });
 }
 
-function uploadBackupToDrive() {
+async function uploadBackupToDrive() {
+  const BACKUP_FILENAME = '清洗訂單_備份.json'; // 單一備份檔名（每次覆蓋）
+
   const data = {
     orders: JSON.parse(localStorage.getItem('yl_clean_orders_v1') || '[]'),
     staffList: JSON.parse(localStorage.getItem('yl_clean_staff_v1') || '[]'),
@@ -1477,24 +1526,71 @@ function uploadBackupToDrive() {
     exportedAt: new Date().toISOString()
   };
   const blob = new Blob([JSON.stringify(data, null, 2)], { type: 'application/json' });
-  const metadata = {
-    name: `清洗訂單_${new Date().toISOString().split('T')[0]}.json`,
-    mimeType: 'application/json'
-  };
 
-  const form = new FormData();
-  form.append('metadata', new Blob([JSON.stringify(metadata)], { type: 'application/json' }));
-  form.append('file', blob);
+  const authHeader = new Headers({ 'Authorization': 'Bearer ' + gapi.auth.getToken().access_token });
 
-  fetch('https://www.googleapis.com/upload/drive/v3/files?uploadType=multipart', {
-    method: 'POST',
-    headers: new Headers({ 'Authorization': 'Bearer ' + gapi.auth.getToken().access_token }),
-    body: form
+  // 1) 先找是否已存在同名備份檔
+  const query = encodeURIComponent(`name = '${BACKUP_FILENAME}' and trashed = false`);
+  fetch(`https://www.googleapis.com/drive/v3/files?q=${query}&spaces=drive&fields=files(id,name)`, {
+    method: 'GET',
+    headers: authHeader
   })
-  .then(res => res.json())
-  .then(res => {
-    if (res.id) alert('✅ 備份成功，上傳至你的 Google Drive！');
-    else alert('❌ 備份失敗：' + JSON.stringify(res));
+  .then(r => r.json())
+  .then(async listRes => {
+    const files = Array.isArray(listRes.files) ? listRes.files : [];
+
+    if (files.length > 0) {
+      // 2a) 有舊檔：用 PATCH + uploadType=media 直接覆蓋內容
+      const fileId = files[0].id;
+
+      const resp = await fetch(`https://www.googleapis.com/upload/drive/v3/files/${fileId}?uploadType=media`, {
+        method: 'PATCH',
+        headers: new Headers({
+          'Authorization': 'Bearer ' + gapi.auth.getToken().access_token,
+          'Content-Type': 'application/json'
+        }),
+        body: blob
+      });
+
+      const json = await resp.json();
+      if (json && json.id) {
+        // 若有重複的同名檔案，清乾淨只保留第一個
+        if (files.length > 1) {
+          for (let i = 1; i < files.length; i++) {
+            try {
+              await fetch(`https://www.googleapis.com/drive/v3/files/${files[i].id}`, {
+                method: 'DELETE',
+                headers: authHeader
+              });
+            } catch (e) { /* 忽略刪除失敗，不影響覆蓋成功 */ }
+          }
+        }
+        alert('✅ 備份成功（已覆蓋舊檔）');
+      } else {
+        alert('❌ 覆蓋備份失敗：' + JSON.stringify(json));
+      }
+    } else {
+      // 2b) 沒有舊檔：建立一個固定檔名的備份檔
+      const metadata = {
+        name: BACKUP_FILENAME,
+        mimeType: 'application/json'
+      };
+      const form = new FormData();
+      form.append('metadata', new Blob([JSON.stringify(metadata)], { type: 'application/json' }));
+      form.append('file', blob);
+
+      const resp = await fetch('https://www.googleapis.com/upload/drive/v3/files?uploadType=multipart', {
+        method: 'POST',
+        headers: authHeader,
+        body: form
+      });
+      const json = await resp.json();
+      if (json && json.id) {
+        alert('✅ 備份成功（已建立固定檔）');
+      } else {
+        alert('❌ 建立備份檔失敗：' + JSON.stringify(json));
+      }
+    }
   })
   .catch(err => {
     console.error(err);
@@ -1517,177 +1613,86 @@ window.onload = () => {
   };
   document.body.appendChild(script);
 };
-</script>
-<!-- === Auto-backup to 「訂單排成備份」資料夾：附加覆蓋版 === -->
-<script>
-// 若你的頁面已載入 GSI 與建立 tokenClient（沿用現有變數 tokenClient 與初始化流程）
-// 這段腳本會覆蓋舊的雲端備份按鈕行為，將檔案自動備份到固定資料夾「訂單排成備份」，同日重按會覆寫同名檔。
+</script><script>
 
-(function(){
-  const BACKUP_FOLDER_NAME = '訂單排成備份';
+function restoreBackupFromDrive() {
+  const BACKUP_FILENAME = '清洗訂單_備份.json';
+  try {
+    let tokenObj = (gapi && gapi.auth && gapi.auth.getToken) ? gapi.auth.getToken() : null;
+let accessToken = tokenObj && tokenObj.access_token;
+if (!accessToken) {
+  try { accessToken = await ensureDriveAuth({ prompt: '' }); }
+  catch(e) { alert('需要 Google 授權才能還原備份'); return; }
+}
 
-  async function withAccessToken(run) {
-    return new Promise((resolve, reject) => {
+
+    if (!confirm('這會用雲端備份覆蓋本地資料（訂單/人員/聯絡方式）。要繼續嗎？')) return;
+
+    const headers = new Headers({ 'Authorization': 'Bearer ' + accessToken });
+    const query = encodeURIComponent(`name = '${BACKUP_FILENAME}' and trashed = false`);
+
+    // 先找最新的同名檔
+    fetch(`https://www.googleapis.com/drive/v3/files?q=${query}&spaces=drive&fields=files(id,name,modifiedTime)&orderBy=modifiedTime desc`, {
+      method: 'GET',
+      headers
+    })
+    .then(r => r.json())
+    .then(async listRes => {
+      const files = Array.isArray(listRes.files) ? listRes.files : [];
+      if (files.length === 0) {
+        alert('找不到雲端備份檔（清洗訂單_備份.json）。請先用「☁️Google」建立一次。');
+        return;
+      }
+      const fileId = files[0].id;
+      const resp = await fetch(`https://www.googleapis.com/drive/v3/files/${fileId}?alt=media`, {
+        method: 'GET',
+        headers
+      });
+      if (!resp.ok) {
+        alert('下載備份失敗：' + (await resp.text()));
+        return;
+      }
+      const json = await resp.json();
+      const orders = Array.isArray(json.orders) ? json.orders : [];
+      const staffList = Array.isArray(json.staffList) ? json.staffList : [];
+      const contactList = Array.isArray(json.contactList) ? json.contactList : [];
+
+      localStorage.setItem('yl_clean_orders_v1', JSON.stringify(orders));
+      localStorage.setItem('yl_clean_staff_v1', JSON.stringify(staffList));
+      localStorage.setItem('yl_clean_contact_v1', JSON.stringify(contactList));
+
+      // 嘗試刷新 UI
       try {
-        if (!window.tokenClient) throw new Error('tokenClient 尚未初始化');
-        tokenClient.callback = async (resp) => {
-          try {
-            if (resp.error) throw resp;
-            const result = await run(resp.access_token);
-            resolve(result);
-          } catch (e) { reject(e); }
-        };
-        try {
-          tokenClient.requestAccessToken({ prompt: '' });
-        } catch (_) {
-          tokenClient.requestAccessToken();
-        }
-      } catch (e) { reject(e); }
+        if (typeof refreshTable === 'function') refreshTable();
+        if (typeof rebuildSummary === 'function') rebuildSummary();
+      } catch (e) {/* 忽略 */}
+
+      alert('✅ 已從 Google 還原備份（本地資料已覆蓋）。');
+    })
+    .catch(err => {
+      console.error(err);
+      alert('❌ 還原過程發生錯誤。');
     });
+  } catch (e) {
+    console.error(e);
+    alert('❌ 還原過程發生錯誤。');
   }
+}
 
-  async function ensureBackupFolder(accessToken) {
-    const searchParams = new URLSearchParams({
-      q: `mimeType='application/vnd.google-apps.folder' and name='${BACKUP_FOLDER_NAME}' and trashed=false`,
-      fields: 'files(id,name)'
-    });
-    const listRes = await fetch(`https://www.googleapis.com/drive/v3/files?${searchParams}`, {
-      headers: { Authorization: `Bearer ${accessToken}` }
-    });
-    if (!listRes.ok) throw new Error('查詢資料夾失敗');
-    const listJson = await listRes.json();
-    if (listJson.files && listJson.files.length > 0) return listJson.files[0].id;
-
-    const createRes = await fetch('https://www.googleapis.com/drive/v3/files?fields=id', {
-      method: 'POST',
-      headers: {
-        Authorization: `Bearer ${accessToken}`,
-        'Content-Type': 'application/json; charset=UTF-8'
-      },
-      body: JSON.stringify({
-        name: BACKUP_FOLDER_NAME,
-        mimeType: 'application/vnd.google-apps.folder'
-      })
-    });
-    if (!createRes.ok) throw new Error('建立資料夾失敗');
-    const createJson = await createRes.json();
-    return createJson.id;
-  }
-
-  function buildBackupJson() {
-    // 盡量沿用既有的資料讀取函式名稱，若不存在則以空陣列代替，避免報錯
-    const payload = {
-      exportedAt: new Date().toISOString(),
-      orders: (window.loadOrders ? loadOrders() : []),
-      staffList: (window.loadStaffList ? loadStaffList() : []),
-      contactList: (window.loadContactList ? loadContactList() : []),
-      expenses: (window.loadExpenses ? loadExpenses() : []),
-      expenseCategories: (window.loadExpenseCategories ? loadExpenseCategories() : [])
-    };
-    return JSON.stringify(payload, null, 2);
-  }
-
-  async function uploadJsonToFolder(accessToken, folderId, fileName, jsonString) {
-    const q = `'${folderId}' in parents and name='${fileName}' and trashed=false`;
-    const search = new URLSearchParams({ q, fields: 'files(id,name)' });
-    const existRes = await fetch(`https://www.googleapis.com/drive/v3/files?${search}`, {
-      headers: { Authorization: `Bearer ${accessToken}` }
-    });
-    if (!existRes.ok) throw new Error('查詢既有備份失敗');
-    const existJson = await existRes.json();
-    const existing = (existJson.files && existJson.files[0]) || null;
-
-    const metadata = {
-      name: fileName,
-      mimeType: 'application/json',
-      parents: [folderId]
-    };
-    const boundary = '-------yl_backup_' + Math.random().toString(16).slice(2);
-    const body = [
-      `--${boundary}`,
-      'Content-Type: application/json; charset=UTF-8',
-      '',
-      JSON.stringify(metadata),
-      `--${boundary}`,
-      'Content-Type: application/json; charset=UTF-8',
-      '',
-      jsonString,
-      `--${boundary}--`,
-      ''
-    ].join('\r\n');
-
-    const method = existing ? 'PATCH' : 'POST';
-    const url = existing
-      ? `https://www.googleapis.com/upload/drive/v3/files/${existing.id}?uploadType=multipart&fields=id`
-      : `https://www.googleapis.com/upload/drive/v3/files?uploadType=multipart&fields=id`;
-
-    const res = await fetch(url, {
-      method,
-      headers: {
-        Authorization: `Bearer ${accessToken}`,
-        'Content-Type': `multipart/related; boundary=${boundary}`
-      },
-      body
-    });
-    if (!res.ok) throw new Error('上傳備份失敗');
-  }
-  function localISODate(){
-    const d = new Date();
-    const y = d.getFullYear();
-    const m = String(d.getMonth() + 1).padStart(2, '0');
-    const day = String(d.getDate()).padStart(2, '0');
-    return `${y}-${m}-${day}`;
-  }
-
-
-
-  async function gdriveAutoBackupToFixedFolder() {
-    const fileName = `清洗訂單_最新.json`;
-    const json = buildBackupJson();
-    await withAccessToken(async (accessToken) => {
-      const folderId = await ensureBackupFolder(accessToken);
-      await uploadJsonToFolder(accessToken, folderId, fileName, json);
-    });
-    alert(`已備份到「${BACKUP_FOLDER_NAME}」資料夾，並覆蓋同名檔（${fileName}）`);
-  }
-
-  function tryBindButtons() {
-    const candidates = [
-      '#btn-gdrive-backup','#btn-gdrive','#btn-google','#btnBackupGoogle',
-      '#btn-cloud','#btnDrive','#btnBackup','#gdrive-backup'
-    ];
-    let btn = null;
-    for (const sel of candidates) {
-      const el = document.querySelector(sel);
-      if (el) { btn = el; break; }
-    }
-    // 退而求其次：找包含 Google/雲端/☁️ 字樣的按鈕
-    if (!btn) {
-      const allBtns = Array.from(document.querySelectorAll('button, a, [role=\"button\"]'));
-      btn = allBtns.find(el => /google|雲端|備份|☁️/i.test(el.textContent || ''));
-    }
-    if (btn) {
-      btn.addEventListener('click', function(ev){
-        ev.preventDefault();
-        gdriveAutoBackupToFixedFolder().catch(err => {
-          console.error(err);
-          alert('Google Drive 備份發生問題：' + (err && err.message ? err.message : err));
-        });
-      }, true);
-    } else {
-      console.warn('找不到 Google 備份按鈕，請確認按鈕的 selector 並綁定至 gdriveAutoBackupToFixedFolder');
-    }
-  }
-
-  // 避免和現有初始化時序衝突，DOM 互動延後到 load 後
-  if (document.readyState === 'complete') {
-    setTimeout(tryBindButtons, 0);
-  } else {
-    window.addEventListener('load', () => setTimeout(tryBindButtons, 0));
-  }
-})();
+// 綁定還原按鈕事件
+window.addEventListener('DOMContentLoaded', ()=>{
+  var btn = document.getElementById('btnDriveRestore');
+  if (btn) btn.addEventListener('click', restoreBackupFromDrive);
+});
 </script>
+<script>
 
+// 確保載入後先初始化 Google 物件（供 ↓Google 首次直接授權用）
+window.addEventListener('DOMContentLoaded', () => {
+  try { if (typeof gdriveInit === 'function') gdriveInit(); } catch (e) {}
+});
+
+</script>
 </body>
 </html>
 <script>
